# tsc-agents

./: .editorconfig  .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING.md  IDENTITY.md  README.md  SECURITY.md  SOUL.md  USER.md  cn.json  cn_agent.opam  deploy.sh  install.sh  package-lock.json  package.json  setup.sh  setup_0.1.1.sh
.github/workflows/: ci.yml  release.yml
cli/: github.js  hubConfig.js  index.js
docs/: ARCHITECTURE.md  AUDIT-2026-02-06.md  CN-WHITEPAPER.md  DESIGN-REVIEW-V2-2026-02-05.md  DOJO.md  EXECUTABLE-COHERENCE.md  FOUNDATIONS.md  GLOSSARY.md  README.md
docs/design/: ACTOR-MODEL-DESIGN.md  AUDIT.md  CLI.md  CN-DAEMON.md  CN-LOGGING.md  CN-MANIFESTO.md  CN-PROTOCOL.md  DAEMON.md  EXECUTABLE-SKILLS.md  INBOX-ARCHITECTURE.md  LOGGING.md  MANIFESTO.md  PROTOCOL.md  SECURITY-MODEL.md  WHITEPAPER.md
docs/explanation/: APHORISMS.md  FOUNDATIONS.md
docs/how-to/: AUTOMATION.md  HANDSHAKE.md  WRITE-A-SKILL.md
docs/rca/: 2026-02-05-branch-deletion-violation.md  2026-02-05-coordination-failure.md  2026-02-07-wake-failure.md  2026-02-11-actor-timeout-missing.md  README.md
dojo/: INDEX.md  belt-orange.md  belt-white.md  belt-yellow.md  kata-01-hello-world-intro.md  kata-02-read-peer-threads.md  kata-03-comment-on-peer-thread.md  kata-04-check-incoming-pr-comments.md  kata-05-accept-comment-pr.md  kata-06-reply-inside-thread.md  kata-07-subscribe-peer.md  kata-08-unsubscribe-peer.md  kata-09-sync-peers-and-deltas.md  kata-10-scan-incoming-needs-reply.md  kata-11-reply-loop.md  kata-12-summarize-neighborhood.md
experiments/: README.md
mindsets/: ENGINEERING.md  IDENTITY.md  OPERATIONS.md  PM.md  THINKING.md  WISDOM.md  WRITING.md
skills/adhoc-thread/: SKILL.md
skills/communicating/: SKILL.md
skills/configure-agent/: SKILL.md
skills/daily-routine/: SKILL.md  kata.md
skills/documenting/: SKILL.md
skills/inbox/: SKILL.md
skills/ocaml/: SKILL.md
skills/reflect/: SKILL.md  kata.md
skills/release/: SKILL.md
skills/review/: SKILL.md
skills/self-cohere/: SKILL.md
skills/ship/: SKILL.md
skills/skill/: SKILL.md
skills/skill-writing/: SKILL.md
spec/: AGENTS.md  TOOLS.md
state/: README.md  neighborhood.md  peer-sync.md  peers.md  remote-threads.md
test/: cli.test.js  cn.test.js  version.t
tools/: README.md
tools/src/cn/: cn.ml  cn_agent.ml  cn_commands.ml  cn_ffi.ml  cn_fmt.ml  cn_gtd.ml  cn_hub.ml  cn_lib.ml  cn_mail.ml  cn_mca.ml  cn_protocol.ml  cn_protocol.mli  cn_system.ml  dune
tools/test/cn/: cn_cmd_test.ml  cn_protocol_test.ml  dune
(+40 files in other folders)
