; git module (pure git operations)
(library
 (name git)
 (modules git)
 (modes melange)
 (preprocess (pps melange.ppx)))

; cn_io module (CN protocol over git)
(library
 (name cn_io)
 (modules cn_io)
 (libraries git)
 (modes melange)
 (preprocess (pps melange.ppx)))

; cn library (pure functions, testable)
(library
 (name cn_lib)
 (modules cn_lib)
 (libraries inbox_lib)
 (modes :standard melange))

; Shared FFI bindings
(library
 (name cn_ffi)
 (modules cn_ffi)
 (modes melange)
 (preprocess (pps melange.ppx)))

; CN command modules (all share cn_ffi, cn_lib)
(library
 (name cn_cmd)
 (modules cn_fmt cn_hub cn_mail cn_gtd cn_agent cn_mca
          cn_commands cn_system)
 (libraries cn_ffi cn_lib inbox_lib git cn_io)
 (modes melange)
 (preprocess (pps melange.ppx)))

; cn CLI (Melange -> JS)
(melange.emit
 (target output)
 (alias cn)
 (modules cn)
 (libraries cn_cmd cn_ffi cn_lib inbox_lib git cn_io)
 (module_systems commonjs)
 (preprocess (pps melange.ppx)))
