; cn tests (ppx_expect)
(library
 (name cn_test)
 (modules cn_test)
 (libraries cn_lib)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; cn_protocol FSM tests (ppx_expect)
(library
 (name cn_protocol_test)
 (modules cn_protocol_test)
 (libraries cn_protocol)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; cn_cmd tests (ppx_expect) — pure functions from command modules
(library
 (name cn_cmd_test)
 (modules cn_cmd_test)
 (libraries cn_cmd cn_ffi cn_lib cn_protocol)
 (inline_tests)
 (preprocess (pps ppx_expect)))
